<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bio³Air</string>
    <string name="app_service_running">正在后台运行...</string>
    <string name="action_settings">Settings</string>
    <string name="main_top_title">生态 健康 生活</string>
    <!-- main top first -->
    <string name="main_top_f_left">当前时间</string>
    <string name="main_top_f_right">当前空气质量</string>
    <string name="main_top_s_left">当前城市</string>
    <string name="main_top_s_right">健康提示</string>
    <string name="main_top_t_first">近一小时PM2.5吸入量：</string>
    <string name="main_top_t_second">今日累积PM2.5吸入量：</string>
    <string name="main_top_t_third">近7日平均日PM2.5吸入量：</string>
    <string name="main_top_bottom_l">显示手环状态</string>
    <string name="main_top_bottom_r">显示805状态</string>
    <string name="main_fig_1_title">平均5分钟PM2.5吸入量(mg)</string>
    <string name="main_fig_2_title">您所处位置PM2.5浓度(ug/m3)</string>
    <string name="main_fig_3_title">累积吸入的PM2.5量(L)</string>
    <string name="main_fig_4_title">平均单位时间吸入的空气量(L/min)</string>
    <string name="main_fig_5_title"></string>
    <string name="main_fig_6_title">累积吸入的空气量(L)</string>
    <string name="profile_name">姓名</string>
    <string name="profile_username">用户名</string>
    <string name="profile_gender">性别</string>
    <string name="profile_gender_male">男</string>
    <string name="profile_gender_female">女</string>
    <string name="profile_clear_cache">清空本地缓存</string>
    <string name="first_app_name">自由呼吸(Bio³Air)</string>
    <string name="first_title">自由呼吸(Bio³Air)手机APP用户须知</string>
    <string name="first_para_1">1.凡以任何方式使用本APP，或直接、间接使用本APP资料者，均被视为已经仔细阅读本条款并完全同意。并且均被视为自愿接受本APP相关声明和用户服务协议的约束。</string>
    <string name="first_para_2">2.严正声明：北京圣马山环保科技有限公司获专利授权，发布自由呼吸系列产品。自由呼吸系列产品(测量方法，软件系统，硬件设备等) 被专利保护，仿冒必将受到法律的查处。</string>
    <string name="first_para_3">3.健康空气(Bio³Air)手机APP用于测量、记录和显示用户个人大气污染物(例如PM2.5)。</string>
    <string name="first_para_4">4.健康空气(Bio³Air)手机APP为您提供的大气污染物浓度和暴露量数据、以及健康提示，不应用于医学诊断、治疗相关等目的。</string>
    <string name="first_para_5">5.使用健康空气(Bio³Air)手机APP，会产生一定的数据流量，并导致相关费用。</string>
    <string name="first_para_6">6.北京圣马山环保科技有限公司获专利授权，发布自由呼吸系列产品。本声明版权及其修改权、更新权和最终解释权均属北京圣马山环保科技有限公司所有。</string>
    <string name="register_title">用户注册</string><!--For Bluetooth -->
    <string name="ble_not_supported">该设备不支持蓝牙4.3协议</string>
    <string name="label_data">选择接受数据值:</string>
    <string name="label_device_address">设备地址:</string>
    <string name="label_state">连接状态:</string>
    <string name="no_data">No data</string>
    <string name="connected">连接</string>
    <string name="disconnected">无法连接</string>
    <string name="title_devices">可穿戴设备扫描</string>
    <string name="error_bluetooth_not_supported">该手机不支持蓝牙.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <!-- Bluetooth Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_exit_confirm_title">确认退出APP?</string>
    <string name="menu_exit_confirm_content">确认退出，后台服务将会停止，导致数据丢失。如果想保持后台运行，直接按返回键回到桌面即可。</string>
    <string name="menu_exit_confirm_confirm">确认</string>
    <string name="menu_exit_confirm_cancel">取消</string>
    <string name="dialog_base_loading">载入中</string>
    <string name="dialog_base_searching">搜索中</string>
    <string name="dialog_base_begin">开始</string>
    <string name="dialog_base_back">返回</string>
    <string name="profile_btn_help">使用说明</string>
    <string name="profile_btn_saving_battery_on">开启省电模式</string>
    <string name="profile_btn_saving_battery_off">关闭省电模式</string>
    <string name="help_para_title">帮助与说明</string>
    <string name="help_para_1">1.点击定位城市，可进行手动定位当前城市</string>
    <string name="help_para_2">2.点击当前空气质量，可查看当前浓度，可进行手动获取当前位置浓度。</string>
    <string name="help_para_3">3.注册需要相关邀请码，成功登录后，数据将会上传到服务器。</string>
    <string name="help_para_4">4.侧边菜单，修改查看，可重新定位，有GPS和网络两种方式选择。</string>
    <string name="help_para_5">5.侧边菜单，蓝牙，可连接手环计算心率，连接803检测装置获得准确的室内PM2.5浓度。</string>
    <string name="help_para_6">6.为保证APP持续的在后台运行，请保持电量充足，并关闭低电量模式，以获得最准确的数据。</string>
    <string name="help_para_ver">App版本号：3.16</string>
    <string name="register_para_1">用户注册信息用于本公司与合作单位开展的环境健康研究。建议参加相关研究的志愿者，获得邀请码后，进行注册。</string>
    <string name="register_para_2">一般用户不必注册。（非注册状态下使用本APP，享受与注册用户同样的功能）。</string>
    <string name="str_re_localization">重新定位</string>
    <string name="str_current_lati">当前纬度</string>
    <string name="str_current_longi">当前经度</string>
    <string name="str_stop">停止</string>
    <string name="str_back">返回</string>
    <string name="str_hint">提示：</string>
    <string name="str_ug">微克</string>
    <string name="str_no_data">暂无数据</string>
    <string name="str_last_two_hour">最近两小时</string>
    <string name="str_from">从</string>
    <string name="str_to">到</string>
    <string name="share_title">自由呼吸(Bio³Air)的分享</string>
    <string name="share_content">生态 健康 生活</string>
</resources>
