

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <RelativeLayout
        android:id="@+id/main_top_layout"
        style="@style/main_top_bg_style">

        <ImageView
            android:id="@+id/main_profile"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:layout_marginTop="5dip"
            android:layout_marginLeft="5dip"
            android:src="@drawable/bt_localsonglist_move_press" />

        <TextView
            android:id="@+id/textView1"
            style="@style/main_top_center_style"
            android:text="@string/main_top_title" />

        <ImageView
            android:visibility="gone"
            android:id="@+id/main_hot_map"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:layout_marginTop="5dip"
            android:layout_marginRight="5dip"
            android:layout_alignParentRight="true"
            android:src="@drawable/ofm_location_icon" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/main_refresh_chart"
            android:src="@drawable/nav_refresh"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dip"
            android:layout_alignParentRight="true" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_below="@id/main_top_layout"
        android:id="@+id/main_info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/main_info_layout_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_weight="1.3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_top_f_left"
                    android:id="@+id/textView2"
                    android:textSize="14dp"
                    android:layout_marginLeft="10dip"
                    android:layout_marginTop="10dip" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="11:30"
                    android:textSize="14dp"
                    android:id="@+id/main_current_time"
                    android:layout_toRightOf="@+id/textView2"
                    android:layout_marginLeft="10dp"
                    android:layout_alignBaseline="@+id/textView2"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_top_s_left"
                    android:id="@+id/textView4"
                    android:textSize="14dp"
                    android:layout_alignLeft="@+id/textView2"
                    android:layout_below="@+id/textView2"
                    android:layout_marginTop="20dip" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/main_current_city"
                    android:layout_toRightOf="@id/textView4"
                    android:textSize="14dp"
                    android:layout_alignBaseline="@id/textView4"
                    android:layout_marginLeft="10dip"
                    android:text="null" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:id="@+id/main_add_city"
                    android:layout_toEndOf="@+id/main_current_city"
                    android:layout_alignBottom="@+id/textView4"
                    android:src="@drawable/ic_add_circle_36pt_3x" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_top_f_right"
                    android:id="@+id/textView3"
                    android:layout_marginTop="10dip"
                    android:textSize="14dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="111ssssss"
                    android:textSize="14dp"
                    android:layout_alignBaseline="@+id/textView3"
                    android:id="@+id/main_air_quality"
                    android:layout_toEndOf="@+id/textView3"
                    android:layout_marginLeft="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_top_s_right"
                    android:id="@+id/textView5"
                    android:layout_below="@+id/textView3"
                    android:layout_marginTop="20dip"
                    android:textSize="14dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="易感人群"
                    android:id="@+id/main_hint"
                    android:textSize="14dp"
                    android:layout_alignBaseline="@+id/textView5"
                    android:layout_toEndOf="@+id/textView5"
                    android:layout_marginLeft="10dp"/>
            </RelativeLayout>

        </LinearLayout>


        <RelativeLayout
            android:id="@+id/main_info_div_1"
            android:layout_below="@id/main_info_layout_1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/darker_gray"/>

        <RelativeLayout
            android:id="@+id/main_info_layout_2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/main_info_div_1"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:layout_alignParentEnd="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_top_t_first"
                android:id="@+id/textView6"
                android:textSize="14dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="100mg"
                android:textSize="14dp"
                android:id="@+id/main_hour_pm"
                android:layout_alignBaseline="@+id/textView6"
                android:layout_toRightOf="@+id/textView6"
                android:layout_marginLeft="40dip" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_top_t_second"
                android:textSize="14dp"
                android:id="@+id/textView7"
                android:layout_alignLeft="@+id/textView6"
                android:layout_below="@+id/textView6"
                android:layout_marginTop="20dip" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2000mg"
                android:textSize="14dp"
                android:id="@+id/main_day_pm"
                android:layout_alignBaseline="@+id/textView7"
                android:layout_alignLeft="@+id/main_hour_pm" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_top_t_third"
                android:textSize="14dp"
                android:id="@+id/textView8"
                android:layout_alignLeft="@+id/textView6"
                android:layout_below="@+id/textView7"
                android:layout_marginTop="20dip" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3000mg"
                android:textSize="14dp"
                android:id="@+id/main_week_pm"
                android:layout_alignBaseline="@+id/textView8"
                android:layout_alignLeft="@+id/main_hour_pm" />

            <ImageView
                android:layout_width="20dip"
                android:layout_height="20dip"
                android:id="@+id/main_density_error"
                android:src="@android:drawable/presence_busy"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:visibility="gone"
                android:layout_marginEnd="30dip"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/main_run_error"
                android:src="@android:drawable/btn_dialog"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:visibility="gone"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_below="@+id/main_info_layout_2"
            android:id="@+id/main_info_div"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:background="@android:color/darker_gray"></RelativeLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_below="@+id/main_info_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="8dp">

        <RelativeLayout
            android:layout_weight="1"
            android:id="@+id/main_fig_layout_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_fig_1_title"
                android:layout_alignParentLeft="true"
                android:layout_toStartOf="@+id/main_chart_1_alert"
                android:id="@+id/main_chart1_title"
                android:layout_marginLeft="20dip"
                android:textSize="14dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="切换"
                android:id="@+id/main_chart_1_change"
                android:layout_alignParentRight="true"
                android:layout_marginRight="8dip"
                android:layout_alignTop="@+id/main_chart1_title"
                android:textColor="@color/White"
                android:background="@color/AccentBlue"
                android:textSize="18dp" />

            <lecho.lib.hellocharts.view.ColumnChartView
                android:id="@+id/main_chart_1_column"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/main_chart_1_change"
                android:layout_marginTop="5dip"
                android:paddingLeft="18dp"
                android:paddingRight="18dp"
                android:paddingTop="8dp"
                android:visibility="invisible"/>

            <lecho.lib.hellocharts.view.LineChartView
                android:id="@+id/main_chart_1_line"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/main_chart1_title"
                android:paddingRight="18dp"
                android:layout_marginTop="5dip"
                android:paddingLeft="18dp"
                android:paddingTop="8dp"
                android:visibility="invisible"/>

            <ImageView
                android:layout_width="20dip"
                android:layout_height="20dip"
                android:id="@+id/main_chart_1_alert"
                android:layout_toStartOf="@+id/main_chart_1_change"
                android:src="@drawable/ic_error_outline_black_18dp"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="2dp"
                android:visibility="gone"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="查看"
                android:layout_marginRight="2dp"
                android:visibility="gone"
                android:textSize="14dp"
                android:textColor="@color/AccentBlue"
                android:id="@+id/main_view_more_1"
                android:layout_alignBaseline="@+id/main_chart_1_column"
                android:layout_toEndOf="@+id/main_chart1_title" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_below="@+id/main_fig_layout_1"
            android:layout_weight="1"
            android:id="@+id/main_fig_layout_2"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dip">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_fig_2_title"
                android:layout_marginLeft="20dip"
                android:layout_toStartOf="@+id/main_view_more_2"
                android:layout_alignParentLeft="true"
                android:id="@+id/main_chart2_title"
                android:textSize="14dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="切换"
                android:id="@+id/main_chart_2_change"
                android:layout_alignParentRight="true"
                android:layout_marginRight="8dip"
                android:layout_alignTop="@+id/main_chart2_title"
                android:textColor="@color/White"
                android:background="@color/AccentBlue"
                android:textSize="18dp" />


            <ImageView
                android:layout_width="20dip"
                android:layout_height="20dip"
                android:id="@+id/main_chart_hint_2"
                android:src="@android:drawable/ic_menu_info_details"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="10dip"
                android:layout_alignTop="@+id/main_chart2_title"
                android:layout_toEndOf="@+id/main_chart2_title"
                android:visibility="gone"/>

            <lecho.lib.hellocharts.view.ColumnChartView
                android:id="@+id/main_chart_2_column"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/main_chart2_title"
                android:paddingTop="8dp"
                android:layout_marginTop="5dip"
                android:paddingLeft="18dp"
                android:paddingRight="18dp"
                android:visibility="invisible" />

            <lecho.lib.hellocharts.view.LineChartView
                android:id="@+id/main_chart_2_line"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/main_chart2_title"
                android:paddingTop="8dp"
                android:layout_marginTop="5dip"
                android:paddingRight="18dp"
                android:paddingLeft="18dp"
                android:visibility="invisible" />

            <ImageView
                android:layout_width="20dip"
                android:layout_height="20dip"
                android:id="@+id/main_chart_2_alert"
                android:layout_toStartOf="@+id/main_chart_2_change"
                android:src="@drawable/ic_error_outline_black_18dp"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="2dp"
                android:visibility="gone"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="查看"
                android:visibility="gone"
                android:textColor="@color/AccentBlue"
                android:id="@+id/main_view_more_2"
                android:layout_marginRight="2dp"
                android:textSize="14dp"
                android:layout_alignBaseline="@+id/main_chart_2_column"
                android:layout_toStartOf="@+id/main_chart_2_alert" />

        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>